fix alignement for about footer section on mobile

--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -22,6 +22,14 @@ footer.footer-content
     padding-left 0
   .footer-about
     text-align left
+    @media $sm
+      h2
+        text-align center
+      p
+        text-align center
+        padding-bottom 30px
+
+
   .footer-social-icons
     margin 80px 0 50px 0
     @media $xs
